# pico_multicore

./: CMakeLists.txt  multicore.c  ultrasonic_sensors.c
